# ResearchPaperSummarizer

./: .coverage 2  .env.example  .gitignore  README.md  papers.db  pyproject.toml  test_arxiv_monitor.py  test_summarization.py
docker/: DEPLOYMENT.md  Dockerfile  README-RASPBERRY-PI.md  deploy.sh  docker-compose.dev.yml  docker-compose.grobid.yml  docker-compose.portainer.yml  docker-compose.yml
src/: papers.db
src/paper_sum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/papersum/config/: settings.py
src/papersum/database/: __init__.py  models.py  session.py
src/papersum/feed/: __init__.py  aggregator.py  scheduler.py
src/papersum/intelligence/: preference_learner.py
src/papersum/models/: abstractive.py  extractive.py  hybrid.py
src/papersum/newsletter/: coding_tips.py  email_service.py  generator.py  scheduler.py  tip_generator.py
src/papersum/parse/: pdf_extractor.py  tei_from_pdfs.py
src/papersum/scraping/: __init__.py  arxiv_monitor.py
src/papersum/utils/: service_registry.py
src/papersum/web/: __init__.py  main.py  schemas.py
